; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_evp_test.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_evp_test.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@run_file_tests = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i64 (...) @test_get_argument_count()
  store i64 %3, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @run_file_tests, align 4
  %9 = load i64, i64* %2, align 8
  %10 = call i32 @ADD_ALL_TESTS(i32 %8, i64 %9)
  store i32 1, i32* %1, align 4
  br label %11

11:                                               ; preds = %7, %6
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i64 @test_get_argument_count(...) #1

declare dso_local i32 @ADD_ALL_TESTS(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
